fix: control visibility in render function instead of css
affects: ak-inline-dialog

--- a/packages/ak-inline-dialog/src/host.less
+++ b/packages/ak-inline-dialog/src/host.less
@@ -2,11 +2,7 @@
 
 .ak-inline-dialog, // for testing
 ak-inline-dialog {
-  display:none;
 
-  &[open] {
-    display:block;
-  }
 }
 
 ak-animtest {
